// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root TextField-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="MuiPrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input TextField-input"
          placeholder="Start typing here..."
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-0-label"
        id="downshift-0-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete render options when start typing 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      aria-owns="downshift-1-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root TextField-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="MuiPrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input TextField-input"
          placeholder="Start typing here..."
          type="text"
          value="t"
        />
      </div>
      <div
        aria-labelledby="downshift-1-label"
        id="downshift-1-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
        >
          <div
            class="ScrollMenu-scrollView"
            tabindex="0"
          >
            <li
              class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
              role="menuitem"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-black MuiTypography-body1 MenuItem-stringContent"
              >
                Croatia
              </p>
            </li>
            <li
              class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
              role="menuitem"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-black MuiTypography-body1 MenuItem-stringContent"
              >
                Lithuania
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
